--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background-image: url("gift.jpg");
+    background-image: url("/gift.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     height: 100vh;
@@ -17,7 +17,7 @@ body {
 }
 
 body::before {
-    background-image: url("gift.jpg");
+    background-image: url("/gift.jpg");
     background-repeat: no-repeat;
     background-position: cover;
     content: "";
